# weather-prediction

./: 1000 datasets.csv  MLmodel.ipynb  app.py  label_encoder_precip.pkl  label_encoder_summary.pkl  pyproject.toml
templates/: index.html
